# AutoReview

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mcp_server.py  pyproject.toml  run_local.py
.claude/hooks/: lint-python.sh
.github/workflows/: ci.yml
autoreview/: cli.py  logging.py
autoreview/analysis/: clustering.py  comprehensiveness.py  contextual_enricher.py  evidence_chains.py  evidence_map.py  gap_detector.py  passage_miner.py
autoreview/benchmark/: runner.py
autoreview/config/: __init__.py  models.py
autoreview/critique/: holistic_critic.py  models.py  outline_critic.py  revision.py  rubrics.py  section_critic.py
autoreview/evaluation/: aggregator.py  arise_rubric.py  batch_runner.py  citation_matcher.py  cost_analyzer.py  evaluator.py  llm_scorer.py  models.py  pdf_extractor.py  report_generator.py  structural_metrics.py
autoreview/extraction/: extractor.py  models.py  truncation.py
autoreview/llm/: __init__.py  claude.py  factory.py  ollama.py  provider.py
autoreview/models/: base.py  enrichment.py  knowledge_base.py  narrative.py  paper.py
autoreview/output/: bibliography.py  formatter.py
autoreview/pipeline/: dag.py  nodes.py  remediation.py  runner.py
autoreview/search/: aggregator.py  base.py  full_text.py  openalex.py  perplexity.py  pubmed.py  rate_limiter.py  semantic_scholar.py  unpaywall.py
autoreview/validation/: citation_validator.py
autoreview/writing/: assembler.py  narrative_architect.py  outliner.py  section_writer.py
docs/: gen_pipeline_overview.py  generate_architecture_diagram.py
docs/plans/: 2026-02-24-comprehensiveness-checks-design.md  2026-02-24-comprehensiveness-checks-prompt.md  2026-02-24-comprehensiveness-checks.md  2026-02-24-passage-mining-supplemental-search.md  2026-02-25-adaptive-search-remediation-design.md  2026-02-25-adaptive-search-remediation.md  2026-02-25-writing-quality-narrative-design.md
paper/analysis/: README.md  inject_bibliography.py  reference_parser.py  reference_resolver.py
tests/: conftest.py  test_config.py  test_models.py
tests/test_analysis/: test_clustering.py  test_comprehensiveness.py  test_contextual_enricher.py  test_evidence_chains.py  test_inject_bibliography.py  test_integration.py  test_passage_miner.py  test_reference_parser.py  test_reference_resolver.py
tests/test_cli/: test_date_range.py
tests/test_config/: test_config_loading.py  test_models.py
tests/test_critique/: test_critics.py  test_revision.py  test_rubrics.py
tests/test_evaluation/: test_arise_rubric.py  test_batch_runner.py  test_citation_matcher.py  test_cost_analyzer.py  test_evaluator.py  test_llm_scorer.py  test_llm_scoring_prompts.py  test_models.py  test_pdf_extractor.py  test_report_generator.py  test_structural_metrics.py
tests/test_extraction/: test_extractor.py  test_tiered_models.py  test_truncation.py
(+52 files in other folders)
